# jmg

./: .gitignore  README.md  pyproject.toml
account/: admin.py  forms.py  models.py  urls.py  user_check.py  views.py  widgets.py
account/forms/: forms.py  main.py  state_admin.py  super_admin.py
account/migrations/: 0001_initial.py  0002_auto_20201031_1714.py  0002_profile.py  0003_auto_20201008_1837.py  0003_auto_20201010_2109.py  0003_auto_20201122_1713.py
account/templatetags/: add_get_parameter.py
account/urls/: hq.py  main.py  state.py  state_admin.py  super_admin.py  urls.py
account/views/: hq.py  main.py  state.py  state_admin.py  super_admin.py  views.py
company/: admin.py  forms.py  models.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_auto_20201014_0841.py
company/urls/: main.py  state.py  state_admin.py  urls.py
company/views/: state.py  state_admin.py  views.py
dashboard/: views.py
fixtures/: 14_10_2020_data.json  20_10_2020_data.json  22_10_2020_data.json  edited_data.json  init_data.json  initial_data.json
jmg/: context_processors.py  settings.py  urls.py
mine/: admin.py  forms.py  models.py  urls.py  views.py
mine/forms/: forms.py  main.py  state_admin.py
mine/migrations/: 0001_initial.py  0002_auto_20201007_0041.py  0002_auto_20201101_0005.py  0002_mine_status.py  0002_operator_state.py  0003_auto_20201017_0904.py  0003_auto_20201101_0310.py  (+15 more)
mineral/: admin.py  models.py
notification/: context_processors.py  models.py  notify.py
quarry/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+354 files in other folders)
