[tool.poetry]
name = "jmg"
version = "0.1.0"
description = ""
authors = ["Ijat Ayam"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
decouple = "^0.0.7"
django-crispy-forms = "^1.9.2"
Pillow = "^7.2.0"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
